force-app/main/default/objects/QuoteFile__c/QuoteFile__c.object-meta.xml
<CustomObject>
    <label>견적 파일</label>
    <nameField>
        <displayFormat>QF-{0000000000}</displayFormat>
        <label>견적파일번호</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>