force-app/main/default/objects/QuoteFile__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <label>할인</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>