force-app/main/default/objects/QuoteFile__c/fields/DownloadURL__c.field-meta.xml
<CustomField>
    <fullName>DownloadURL__c</fullName>
    <label>DownloadUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>