force-app/main/default/objects/QuoteFile__c/fields/FileName__c.field-meta.xml
<CustomField>
    <fullName>FileName__c</fullName>
    <label>파일명(Txt)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>