force-app/main/default/objects/QuoteFile__c/fields/FileType__c.field-meta.xml
<CustomField>
    <fullName>FileType__c</fullName>
    <label>파일유형</label>
    <length>255</length>
    <type>Text</type>
</CustomField>