force-app/main/default/objects/QuoteFile__c/fields/FileVersion__c.field-meta.xml
<CustomField>
    <fullName>FileVersion__c</fullName>
    <label>FileVersion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>