force-app/main/default/objects/QuoteFile__c/fields/fm_Download__c.field-meta.xml
<CustomField>
    <fullName>fm_Download__c</fullName>
    <formula>HYPERLINK( DownloadURL__c, FileName__c ,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>파일명</label>
    <type>Text</type>
</CustomField>