force-app/main/default/objects/QuoteFile__c/fields/GrandTotal__c.field-meta.xml
<CustomField>
    <fullName>GrandTotal__c</fullName>
    <label>총계</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>