force-app/main/default/objects/QuoteFile__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <label>견적</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>견적 파일</relationshipLabel>
    <relationshipName>QuoteFiles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>